<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/search_view_bg"
                android:elevation="5dp"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:queryHint="Search for a city"
                app:searchIcon="@drawable/search_icon" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="5dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_current_data">

                    <TextView
                        android:id="@+id/cityName"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_mono_bold"
                        android:text="City Name"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono_bold"
                        android:text="Date"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/cityName"
                        app:layout_constraintStart_toStartOf="@+id/cityName"
                        app:layout_constraintTop_toBottomOf="@+id/cityName" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieAnimationView"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true" />

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono_bold"
                        android:gravity="center"
                        android:text="---"
                        android:textColor="@color/white"
                        android:textSize="60sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono_bold"
                        android:text="Condition"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/temperature" />


                    <TextView
                        android:id="@+id/conditionDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_mono"
                        android:text="description"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/condition" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/conditionDescription">

                        <androidx.constraintlayout.helper.widget.Flow
                            android:id="@+id/flow2"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            app:constraint_referenced_ids="linearLayout,linearLayout2,linearLayout3"
                            app:flow_maxElementsWrap="3"
                            app:flow_wrapMode="chain"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="90dp"
                            android:layout_height="110dp"
                            android:gravity="bottom|center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:src="@drawable/humidity" />

                            <TextView
                                android:id="@+id/humidity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_mono"
                                android:gravity="center"
                                android:text="@string/dashedLine"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:fontFamily="@font/roboto_mono"
                                android:gravity="center"
                                android:text="@string/humidity"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="90dp"
                            android:layout_height="110dp"
                            android:gravity="bottom|center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_margin="7dp"
                                android:src="@drawable/wind" />

                            <TextView
                                android:id="@+id/wind"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_mono"
                                android:gravity="center"
                                android:text="@string/dashedLine"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:fontFamily="@font/roboto_mono"
                                android:gravity="center"
                                android:text="@string/wind"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="90dp"
                            android:layout_height="110dp"
                            android:gravity="bottom|center_vertical"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:src="@drawable/visibility" />

                            <TextView
                                android:id="@+id/visibility"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_mono"
                                android:gravity="center"
                                android:text="@string/dashedLine"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:fontFamily="@font/roboto_mono"
                                android:gravity="center"
                                android:text="@string/visibility"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:elevation="5dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_hourly_view">

                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/roboto_mono"
                            android:gravity="center"
                            android:text="@string/today"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/next_5_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="40dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:fontFamily="@font/roboto_mono"
                            android:text="Next 5 Days >"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="TouchTargetSizeCheck" />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/hourlyView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="@string/weather_report"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>